# sniproxy

./: README.md  sniproxy.sln
sniproxy/: BinaryReader.h  CMakeLists.txt  Hosting.cpp  Hosting.h  IPEndPoint.cpp  IPEndPoint.h  Ipep.cpp  Ipep.h  MemoryStream.h  SeekOrigin.h  Stream.h  appsettings.json  main.cpp  server.cpp  server.h  sniproxy.h  sniproxy.vcxproj  sniproxy.vcxproj.filters  stdafx.cpp  stdafx.h
